--- a/emptysquare/config.toml
+++ b/emptysquare/config.toml
@@ -4,6 +4,10 @@ languageCode = "en-us"
 theme = "hugo_theme_emptysquare"
 canonifyurls = false
 Pagination = 10
+copyright = "(c) A. Jesse Jiryu Davis, all rights reserved."
+
+[author]
+name = "A. Jesse Jiryu Davis"
 
 [params]
 TwitterHandle = "jessejiryudavis"
@@ -25,7 +29,7 @@ category = "blog/category"
     name = "Feed"
     weight = 2
     identifier = "feed"
-    url = "/blog/feed/index.xml"
+    url = "/index.xml"
 
 [[menu.Main]]
     name = "About"
