--- a/emptysquare/config.toml
+++ b/emptysquare/config.toml
@@ -7,12 +7,9 @@ Pagination = 10
 copyright = "(c) A. Jesse Jiryu Davis, all rights reserved."
 disqusShortname = "emptysquare"
 
-[author]
-name = "A. Jesse Jiryu Davis"
-
 [params]
-TwitterHandle = "jessejiryudavis"
-Author = "A. Jesse Jiryu Davis"
+twitterhandle = "jessejiryudavis"
+author = "A. Jesse Jiryu Davis"
 
 [taxonomies]
 tag = "tag"
