--- a/emptysquare/data/series.toml
+++ b/emptysquare/data/series.toml
@@ -13,3 +13,11 @@ content = """
 <p><img style="display:block; margin-left:auto; margin-right:auto;" src="/grok-the-gil-series/music-box.jpg" alt="Music box mechanism" title="Music box mechanism" /></a></p>
 <p>I wrote Python for years while holding mistaken notions about the Global Interpreter Lock, and I've met others in the same boat. The GIL's effect is simply this: only one thread can execute Python code at a time, while N other threads sleep or await network I/O. Let's read CPython interpreter source and try some examples to grok the GIL, and learn to write fast and thread-safe Python.</p>
 """
+
+[transitional]
+title = "Transitional Housing"
+description = "Portraits and stories of formerly homeless New Yorkers."
+content = """
+<p><img style="display:block; margin-left:auto; margin-right:auto;" src="/praxis-series/praxis.jpg" alt="Music box mechanism" title="Music box mechanism" /></a></p>
+<p>Beginning in 2007, I've photographed residents of <a href="https://www.praxishousing.org/">Praxis</a>, New York City's largest transitional housing facility for homeless people with HIV.</p>
+"""
