--- a/emptysquare/supervisord.conf
+++ b/emptysquare/supervisord.conf
@@ -1,7 +1,7 @@
 # For conveniently controlling preview server with "./blog server [start|stop]"
 
 [program:hugo]
-command=/Users/emptysquare/gocode/bin/hugo server --theme=hugo_theme_emptysquare --buildDrafts
+command=hugo server --theme=hugo_theme_emptysquare --buildDrafts
 
 [supervisord]
 
