Configure "buildDrafts" and theme in config.toml

--- a/emptysquare/config.toml
+++ b/emptysquare/config.toml
@@ -9,6 +9,7 @@ disqusShortname = "emptysquare"
 pygmentsUseClassic=true
 pygmentsStyle = "default"
 pygmentsCodeFences = "true"
+buildDrafts = true
 
 [params]
 twitterhandle = "jessejiryudavis"
