--- a/emptysquare/supervisord.conf
+++ b/emptysquare/supervisord.conf
@@ -1,15 +1,16 @@
 # For conveniently controlling preview server with "./blog server [start|stop]"
 
 [program:hugo]
-command=hugo server
+command=hugo server --verbose
+redirect_stderr=true
 
 [supervisord]
 
 [inet_http_server]
-port = 127.0.0.1:9002
+port = :9002
 
 [rpcinterface:supervisor]
 supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
 [supervisorctl]
-
+serverurl = http://localhost:9002
