journal-of-the-plague-year.md

--- a/emptysquare/config.toml
+++ b/emptysquare/config.toml
@@ -10,6 +10,7 @@ pygmentsUseClassic=true
 pygmentsStyle = "default"
 pygmentsCodeFences = "true"
 buildDrafts = true
+footnoteReturnLinkContents = "↩"
 
 [params]
 twitterhandle = "jessejiryudavis"
