--- a/emptysquare/config.toml
+++ b/emptysquare/config.toml
@@ -33,20 +33,26 @@ series = "series"
     url = "/all-posts/"
 
 [[menu.Main]]
-    name = "Feed"
+    name = "Search"
     weight = 2
+    identifier = "search"
+    url = "/search/"
+
+[[menu.Main]]
+    name = "Feed"
+    weight = 3
     identifier = "feed"
     url = "/index.xml"
 
 [[menu.Main]]
     name = "About"
-    weight = 3
+    weight = 4
     identifier = "about"
     url = "/about/"
 
 [[menu.Main]]
     name = "Portfolio"
-    weight = 4
+    weight = 5
     identifier = "portfolio"
     url = "http://portfolio.emptysqua.re/transitional-housing"
 
