help supervisor resolve localhost

--- a/emptysquare/supervisord.conf
+++ b/emptysquare/supervisord.conf
@@ -7,7 +7,7 @@ redirect_stderr=true
 [supervisord]
 
 [inet_http_server]
-port = :9003
+port = localhost:9003
 
 [rpcinterface:supervisor]
 supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
