fix RSS authorship, try 2

--- a/emptysquare/config.toml
+++ b/emptysquare/config.toml
@@ -21,6 +21,7 @@ twitterhandle = "jessejiryudavis"
 
 [author]
 name = "A. Jesse Jiryu Davis"
+email = "jesse@emptysquare.net"
 
 [taxonomies]
 tag = "tag"
