--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 # Requirements for local administrative chores with the "blog" script.
-click==7.0
-iso8601==0.1.12
-supervisor==4.2.1
-psutil==5.6.6
-pillow==9.3.0
+click
+iso8601
+supervisor
+psutil
+pillow
