replace SVGs with PNGs in RSS

--- a/emptysquare/supervisord.conf
+++ b/emptysquare/supervisord.conf
@@ -1,7 +1,7 @@
 # For conveniently controlling preview server with "./blog server [start|stop]"
 
 [program:hugo]
-command=hugo server --verbose
+command=hugo server --logLevel info
 redirect_stderr=true
 
 [supervisord]
