--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 # Requirements for local administrative chores with the "blog" script.
+bs4
+cairosvg
 click
 iso8601
 supervisor
 psutil
 pillow
+requests
