--- a/emptysquare/data/series.toml
+++ b/emptysquare/data/series.toml
@@ -26,6 +26,14 @@ content = """
 title = "How to Propose, Write, and Deliver a Conference Talk"
 description = "Methods for PyCon and other prestigious tech events."
 content = """
-<p><img style="display:block; margin-left:auto; margin-right:auto;" src="/conference-tips-series/sylvia-pankhurst.jpg" alt="Music box mechanism" title="Music box mechanism" /></a></p>
+<p><img style="display:block; margin-left:auto; margin-right:auto;" src="/conference-tips-series/sylvia-pankhurst.jpg" alt="Old photo of voting rights activist Sylvia Pankhurst speaking to a crowd" title="Sylvia Pankhurst" /></a></p>
 <p>I've been talking at conferences for a few years, and reflecting on what I do that is effective or not. This series describes a methodical approach for proposing a talk, writing it, rehearsing and refining your performance, and delivering the talk in front of a large audience.</p>
+"""
+
+[cs4all]
+title = "MongoDB and CS Education for All"
+description = "Articles I wrote in 2016 and 2017 about MongoDB's involvement with NYC public schools."
+content = """
+<p><img style="display:block; margin-left:auto; margin-right:auto;" src="/cs4all-part-1/image9.png" alt="Color photo of a teacher supervising two students at computers" title="NYC public school computer science education" /></a></p>
+<p>Articles I wrote in 2016 and 2017 about MongoDB's involvement with NYC public schools.</p>
 """
