fix math in RSS/email?

--- a/emptysquare/config.toml
+++ b/emptysquare/config.toml
@@ -62,3 +62,7 @@ series = "series"
         [markup.goldmark.extensions.passthrough.delimiters]
           block = [['$$', '$$']]
           inline = [['\(', '\)']]
+    [markup.goldmark.parser]
+      wrapStandAloneImageWithinParagraph = false
+      [markup.goldmark.parser.attribute]
+        block = true
