--- a/netlify.toml
+++ b/netlify.toml
@@ -3,6 +3,5 @@ command = "python3 blog build"
 publish = "public"
 environment = { PYTHON_VERSION = "3.13", NODE_VERSION = "23" }
 
-[context.production.environment]
+[build.environment]
 HUGO_VERSION = "0.147.5"
-HUGO_ENV = "production"
